tests/reference/asr-dim_float_01-74fa3d6.stderr
semantic error: `dim` argument of `Sum` intrinsic must be INTEGER
 --> tests/errors/dim_float_01.f90:2:26
  |
2 |  print *, sum([1, 2, 3], 1.1)
  |                          ^^^ 
